--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.806</string>
-    <string name="version">Версія: 1.806</string>
+    <string name="version_code">1.807</string>
+    <string name="version">Версія: 1.807</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -502,4 +502,5 @@
     <string name="low_memory_5">"Стан нестачі пам\'яті: "</string>
     <string name="low_memory_6">" байт\n"</string>
     <string name="low_connect">Слабке інтернет з\'єднання</string>
+    <string name="add_cost_сancel">Бажаєте скасувати замовлення?</string>
 </resources>
