--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.806</string>
-    <string name="version">Версия: 1.806</string>
+    <string name="version_code">1.807</string>
+    <string name="version">Версия: 1.807</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -501,4 +501,5 @@
     <string name="low_memory_5">"Состояние нехватки памяти: "</string>
     <string name="low_memory_6">" байт\n"</string>
     <string name="low_connect">Слабое интернет соединение</string>
+    <string name="add_cost_сancel">Хотите отменить заказ?</string>
 </resources>
