--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.810</string>
-    <string name="version">Версия: 1.810</string>
+    <string name="version_code">1.811</string>
+    <string name="version">Версия: 1.811</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -513,4 +513,5 @@
     <string name="cancel_error">Произошла ошибка отмены заказа. Свяжитесь с оператором.</string>
     <string name="del_acc_mes">Все Ваши персоналные данные и настройки будут удалены с приложения и с наших серверов. Приложение будт закрыто.</string>
     <string name="err_del_phone_fb">Ошибка удаления аккаунта. Обратитесь к оператору.</string>
+    <string name="anr_mes">Упс... Что-то пошло не так 😓. Попробуйте ещё раз или чуть позже 🔄</string>
 </resources>
