--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.810</string>
-    <string name="version">Версія: 1.810</string>
+    <string name="version_code">1.811</string>
+    <string name="version">Версія: 1.811</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -513,4 +513,5 @@
     <string name="cancel_error">Сталася помилка скасування замовлення. Зв\'яжіться з оператором.</string>
     <string name="del_acc_mes">Всі Ваші персональні дані та налаштування будуть видалені з додатку та наших серверів. Додаток буде закрит.</string>
     <string name="err_del_phone_fb">Помилка видалення облікового запису. Зверніться до оператора.</string>
+    <string name="anr_mes">Упс... Щось пішло не так 😓. Спробуйте ще раз чи трохи згодом 🔄</string>
 </resources>
