--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.821</string>
-    <string name="version">Версия: 1.821</string>
+    <string name="version_code">1.822</string>
+    <string name="version">Версия: 1.822</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -182,6 +182,8 @@
     <string name="uid_menu">История заказов</string>
     <string name="close_resone_def">Уточнить у диспетчера</string>
     <string name="close_resone_in_work">В обработке</string>
+    <string name="close_resone_in_start_point">Авто подано</string>
+    <string name="close_resone_in_rout">Выполняется</string>
     <string name="close_resone_0">Выполнен</string>
     <string name="close_resone_1">Снят клиентом</string>
     <string name="close_resone_2">Не выполнено</string>
@@ -488,6 +490,8 @@
     <string name="addCostBonusMessage">Для более быстрого поиска авто закажите за наличные или с оплатой поездки картой</string>
     <string name="recounting_order">Происходит перерасчет заказа</string>
     <string name="ex_st_finished">Ваша поездка завершена. Спасибо что воспользовались нашими услугами. Ждем Вас в следующий раз.</string>
+    <string name="ex_st_in_rout">Выполнение заказа водителем.</string>
+    <string name="ex_st_in_start_point">Машина прибыла. Пожалуйста проследуйте на посадку. Приятной поездки</string>
     <string name="pay_error_title">Ошибка платежа</string>
     <string name="try_again_pay">"Попробуйте снова, номер счета на оплату: "</string>
     <string name="no_cards_info">У вас нет проверенных карт для оплаты. Подтвердите свою платежную карту для оплаты поездок.</string>
@@ -515,4 +519,9 @@
     <string name="anr_mes">Упс... Что-то пошло не так 😓. Попробуйте ещё раз или чуть позже 🔄</string>
     <string name="search_address">Поиск адреса</string>
     <string name="err_nal_reoder_mes">К сожалению заказ за наличные в данный момент не возможен. Выберите другой способ оплаты.</string>
+    <string name="clearApp">Очистить данные</string>
+    <string name="clearAppMess">Внимание! Очистка данных приложения удалит все настройки, базы данных, внутренний и внешний кэш, после чего приложение будет перезапущено. Это действие необратимо и может повлиять на работу приложения. Убедитесь, что вы сохранили важные данные перед продолжением. Продолжить?</string>
+    <string name="email_history_order">Запросить историю</string>
+    <string name="SA_message_history">Прошу прислать мне историю моих поездок за период с ..... по .....</string>
+
 </resources>
