--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.821</string>
-    <string name="version">Версія: 1.821</string>
+    <string name="version_code">1.822</string>
+    <string name="version">Версія: 1.822</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -182,6 +182,8 @@
     <string name="uid_menu">Історія замовлень</string>
     <string name="close_resone_def">Уточнить у диспетчера</string>
     <string name="close_resone_in_work">В обробці</string>
+    <string name="close_resone_in_start_point">Авто подано</string>
+    <string name="close_resone_in_rout">Виконується</string>
     <string name="close_resone_0">Виконаний</string>
     <string name="close_resone_1">Знятий клієнтом</string>
     <string name="close_resone_2">Не виконано</string>
@@ -489,6 +491,8 @@
     <string name="addCostBonusMessage">Для швидшого пошуку авто замовте за готівку або з оплатою поїздки карткою</string>
     <string name="recounting_order">Відбувається перерахунок замовлення</string>
     <string name="ex_st_finished">Ваша подорож завершена. Дякуємо, що скористалися нашими послугами. Чекаємо на Вас наступного разу.</string>
+    <string name="ex_st_in_rout">Виконання замовлення водієм.</string>
+    <string name="ex_st_in_start_point">Машина прибула. Будь ласка пройдіть на посадку. Приємної подорожі</string>
     <string name="pay_error_title">Помилка платежу</string>
     <string name="try_again_pay">"Спробуйте знову номер рахунку на оплату: "</string>
     <string name="no_cards_info">У вас немає підтверджених карток для оплати. Підтвердьте платіжну картку для оплати поїздок.</string>
@@ -516,4 +520,8 @@
     <string name="anr_mes">Упс... Щось пішло не так 😓. Спробуйте ще раз чи трохи згодом 🔄</string>
     <string name="search_address">Пошук адреси</string>
     <string name="err_nal_reoder_mes">На жаль, замовлення за готівку в даний момент не можливе. Виберіть інший спосіб оплати.</string>
+    <string name="clearApp">Очистити дані</string>
+    <string name="clearAppMess">Увага! Очищення даних програми видаляє всі налаштування, бази даних, внутрішній та зовнішній кеш, після чого програма буде перезапущена. Ця дія необоротна і може вплинути на роботу програми. Переконайтеся, що перед продовженням зберегли важливі дані. Продовжити?</string>
+    <string name="email_history_order">Запросить историю</string>
+    <string name="SA_message_history">Прошу прислать мне историю моих поездок за период с ..... по .....</string>
 </resources>
