--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.823</string>
-    <string name="version">Version: 1.823</string>
+    <string name="version_code">1.824</string>
+    <string name="version">Version: 1.824</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -520,5 +520,7 @@
     <string name="clearApp">Clear data</string>
     <string name="clearAppMess">Warning! Clearing app data will delete all settings, databases, internal and external cache, and the app will be restarted. This action is irreversible and may affect the functionality of the app. Make sure you have saved important data before continuing. Continue?</string>
     <string name="email_history_order">Request history</string>
-    <string name="SA_message_history">Please send me a history of my trips for the period from ..... to .....</string>
+    <string name="SA_message_history">Please send me the history of my trips for the period from ..... to .....</string>
+    <string name="anr_detected">Error detected</string>
+    <string name="application_is_not_responding">The application is not responding.</string>
 </resources>
