--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.824</string>
-    <string name="version">Version: 1.824</string>
+    <string name="version_code">1.825</string>
+    <string name="version">Version: 1.825</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -126,7 +126,7 @@
     <string name="from_text">From</string>
     <string name="to_text">To</string>
     <string name="serve">Serve</string>
-    <string name="coment">Comment</string>
+    <string name="coment">Enter a message for the driver</string>
     <string name="services">SERVICES</string>
     <string name="resettimetoorder">Check the date or time for pre-order</string>
     <string name="my_routs">Choose a route</string>
@@ -523,4 +523,5 @@
     <string name="SA_message_history">Please send me the history of my trips for the period from ..... to .....</string>
     <string name="anr_detected">Error detected</string>
     <string name="application_is_not_responding">The application is not responding.</string>
+    <string name="check_permition">Please enable geolocation or grant permission to access your location.</string>
 </resources>
