--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.824</string>
-    <string name="version">Версия: 1.824</string>
+    <string name="version_code">1.825</string>
+    <string name="version">Версия: 1.825</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -127,7 +127,7 @@
     <string name="from_text">Откуда</string>
     <string name="to_text">Куда</string>
     <string name="serve">Подача</string>
-    <string name="coment">Комментарий</string>
+    <string name="coment">Введите сообщение для водителя</string>
     <string name="services">УСЛУГИ</string>
     <string name="resettimetoorder">Проверьте дату или время для предварительного заказа</string>
     <string name="my_routs">Выберите маршрут</string>
@@ -525,5 +525,6 @@
     <string name="SA_message_history">Прошу прислать мне историю моих поездок за период с ..... по .....</string>
     <string name="anr_detected">Обнаружена ошибка</string>
     <string name="application_is_not_responding">Приложение не отвечает.</string>
+    <string name="check_permition">Пожалуйста, включите геолокацию или предоставьте разрешение на доступ к местоположению.</string>
 
 </resources>
