--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.825</string>
-    <string name="version">Version: 1.825</string>
+    <string name="version_code">1.826</string>
+    <string name="version">Version: 1.826</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -524,4 +524,6 @@
     <string name="anr_detected">Error detected</string>
     <string name="application_is_not_responding">The application is not responding.</string>
     <string name="check_permition">Please enable geolocation or grant permission to access your location.</string>
+    <string name="map_loading">The map is still loading...</string>
+    <string name="cost_error">Error creating order. Try changing the address or dial the operator</string>
 </resources>
