--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.826</string>
-    <string name="version">Версія: 1.826</string>
+    <string name="version_code">1.827</string>
+    <string name="version">Версія: 1.827</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -153,13 +153,13 @@
     <string name="change_message">"Зміна бази адрес. "</string>
     <string name="server_error_connected">Сервер не прийняв запит. Наберіть оператора через "ДОПОМОГУ"</string>
     <string name="GDPR">GDPR</string>
-    <string name="ok_GDPR">Погодитись  -> </string>
+    <string name="ok_GDPR">Погодитись</string>
     <string name="Dnipro_city">Дніпро</string>
     <string name="city_change">Виберіть місто</string>
     <string name="Zaporizhzhia">Запоріжжя</string>
     <string name="Cherkasy">Черкаси</string>
     <string name="OdessaTest">Одеса (Тест)</string>
-    <string name="disc_text">Змінити вартість на</string>
+    <string name="disc_text">% к вартості</string>
     <string name="email_sent">Повідомлення відправлено</string>
     <string name="send_like">Оцінити додаток</string>
     <string name="send_email_admin">Повідомити про проблему</string>
@@ -254,7 +254,7 @@
     <string name="e_google_pay_canceled">GooglePay скасовано</string>
     <string name="update_count">Перевірити баланс</string>
     <string name="pay_count">Поповнити рахунок</string>
-    <string name="my_card_pay">Платіжна карта</string>
+    <string name="my_card_pay">Оплата</string>
     <string name="my_site">Відвідайте наш сайт</string>
     <!--    <string name="fondy_message">Сплата за послугі таксі.</string>-->
     <string name="fondy_message"> Інша допоміжна діяльність у сфері транспорту</string>
