--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.829</string>
-    <string name="version">Версія: 1.829</string>
+    <string name="version_code">1.830</string>
+    <string name="version">Версія: 1.830</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -529,4 +529,5 @@
     <string name="check_permition">Будь ласка, увімкніть геолокацію або надайте дозвіл на доступ до місцеположення.</string>
     <string name="map_loading">Мапа ще завантажується...</string>
     <string name="cost_error">Помилка створення замовлення. Спробуйте змінити адресу або наберіть оператора</string>
+    <string name="google_maps">Google Maps не встановлені</string>
 </resources>
